<?xml version="1.0"?>
<package>
  <name>mocap_robot_pose</name>
  <version>0.0.0</version>
  <description>Package to enable integration of the ROS robot_pose_ekf with pose data provided by motion capture systems</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
